slect_box 2-17 chance

--- a/From_Doccure/templates/form/Prediction/prediction.html
+++ b/From_Doccure/templates/form/Prediction/prediction.html
@@ -55,137 +55,107 @@
                                       </div> -->
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction3</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction3">
+                                              <select class="form-control select_box select_box3" id="exampleSelectGender" name="prediction3">
                                                 <option>Select Symptom3</option>
-                                                {% for data_prediction in symptom_data3 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction4</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction4">
+                                              <select class="form-control select_box select_box4" id="exampleSelectGender" name="prediction4">
                                                 <option>Select Symptom4</option>
-                                                {% for data_prediction in symptom_data4 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction5</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction5">
+                                              <select class="form-control select_box select_box5" id="exampleSelectGender" name="prediction5">
                                                 <option>Select Symptom5</option>
-                                                {% for data_prediction in symptom_data5 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction6</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction6">
+                                              <select class="form-control select_box select_box6" id="exampleSelectGender" name="prediction6">
                                                 <option>Select Symptom6</option>
-                                                {% for data_prediction in symptom_data6 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction7</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction7">
+                                              <select class="form-control select_box select_box7" id="exampleSelectGender" name="prediction7">
                                                 <option>Select Symptom7</option>
-                                                {% for data_prediction in symptom_data7 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction8</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction8">
+                                              <select class="form-control select_box select_box8" id="exampleSelectGender" name="prediction8">
                                                 <option>Select Symptom8</option>
-                                                {% for data_prediction in symptom_data8 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction9</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction9">
+                                              <select class="form-control select_box select_box9" id="exampleSelectGender" name="prediction9">
                                                 <option>Select Symptom9</option>
-                                                {% for data_prediction in symptom_data9 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction10</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction10">
+                                              <select class="form-control select_box select_box10" id="exampleSelectGender" name="prediction10">
                                                 <option>Select Symptom10</option>
-                                                {% for data_prediction in symptom_data10 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction11</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction11">
+                                              <select class="form-control select_box select_box11" id="exampleSelectGender" name="prediction11">
                                                 <option>Select Symptom11</option>
-                                                {% for data_prediction in symptom_data11 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction12</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction12">
+                                              <select class="form-control select_box select_box12" id="exampleSelectGender" name="prediction12">
                                                 <option>Select Symptom12</option>
-                                                {% for data_prediction in symptom_data12 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                               
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction13</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction13">
+                                              <select class="form-control select_box select_box13" id="exampleSelectGender" name="prediction13">
                                                 <option>Select Symptom13</option>
-                                                {% for data_prediction in symptom_data13 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                               
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction14</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction14">
+                                              <select class="form-control select_box select_box14" id="exampleSelectGender" name="prediction14">
                                                 <option>Select Symptom14</option>
-                                                {% for data_prediction in symptom_data14 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction15</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction15">
+                                              <select class="form-control select_box select_box15" id="exampleSelectGender" name="prediction15">
                                                 <option>Select Symptom15</option>
-                                                {% for data_prediction in symptom_data15 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction16</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction16">
+                                              <select class="form-control select_box select_box16" id="exampleSelectGender" name="prediction16">
                                                 <option>Select Symptom16</option>
-                                                {% for data_prediction in symptom_data16 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction17</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction17">
+                                              <select class="form-control select_box select_box17" id="exampleSelectGender" name="prediction17">
                                                 <option>Select Symptom17</option>
-                                                {% for data_prediction in symptom_data17 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
                                         
