--- a/From_Doccure/templates/form/Prediction/prediction.html
+++ b/From_Doccure/templates/form/Prediction/prediction.html
@@ -39,9 +39,9 @@
                                                 {% endfor %}
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction2</label>			
-                                              <select class="form-control select_box select_box2" id="exampleSelectGender" name="prediction2">
+                                              <select class="form-control select_box select_box2" id="exampleSelectGender" name="prediction2" >
                                                 <option>Select Symptom2</option>
                                                 
                                               </select>
