prediction template display:none

--- a/From_Doccure/templates/form/Prediction/prediction.html
+++ b/From_Doccure/templates/form/Prediction/prediction.html
@@ -53,105 +53,105 @@
                                               
                                             </select>
                                       </div> -->
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction3</label>			
                                               <select class="form-control select_box select_box3" id="exampleSelectGender" name="prediction3">
                                                 <option>Select Symptom3</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction4</label>			
                                               <select class="form-control select_box select_box4" id="exampleSelectGender" name="prediction4">
                                                 <option>Select Symptom4</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction5</label>			
                                               <select class="form-control select_box select_box5" id="exampleSelectGender" name="prediction5">
                                                 <option>Select Symptom5</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction6</label>			
                                               <select class="form-control select_box select_box6" id="exampleSelectGender" name="prediction6">
                                                 <option>Select Symptom6</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction7</label>			
                                               <select class="form-control select_box select_box7" id="exampleSelectGender" name="prediction7">
                                                 <option>Select Symptom7</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction8</label>			
                                               <select class="form-control select_box select_box8" id="exampleSelectGender" name="prediction8">
                                                 <option>Select Symptom8</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction9</label>			
                                               <select class="form-control select_box select_box9" id="exampleSelectGender" name="prediction9">
                                                 <option>Select Symptom9</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction10</label>			
                                               <select class="form-control select_box select_box10" id="exampleSelectGender" name="prediction10">
                                                 <option>Select Symptom10</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction11</label>			
                                               <select class="form-control select_box select_box11" id="exampleSelectGender" name="prediction11">
                                                 <option>Select Symptom11</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction12</label>			
                                               <select class="form-control select_box select_box12" id="exampleSelectGender" name="prediction12">
                                                 <option>Select Symptom12</option>
                                                
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction13</label>			
                                               <select class="form-control select_box select_box13" id="exampleSelectGender" name="prediction13">
                                                 <option>Select Symptom13</option>
                                                
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction14</label>			
                                               <select class="form-control select_box select_box14" id="exampleSelectGender" name="prediction14">
                                                 <option>Select Symptom14</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction15</label>			
                                               <select class="form-control select_box select_box15" id="exampleSelectGender" name="prediction15">
                                                 <option>Select Symptom15</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction16</label>			
                                               <select class="form-control select_box select_box16" id="exampleSelectGender" name="prediction16">
                                                 <option>Select Symptom16</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction17</label>			
                                               <select class="form-control select_box select_box17" id="exampleSelectGender" name="prediction17">
                                                 <option>Select Symptom17</option>
