list of value send to preditdept function

--- a/From_Doccure/templates/form/Prediction/prediction.html
+++ b/From_Doccure/templates/form/Prediction/prediction.html
@@ -28,9 +28,9 @@
 										{% endfor %}
 									</ul>
 									{% endif %}
-                                <form class="forms-sample" method="POST" action="{% url 'prediction_store' %}" enctype="multipart/form-data">
+                                <form class="forms-sample">
                                         {% csrf_token %}
-                                        <div class="form-group">
+                                        <div class="form-group form_group1">
                                             <label for="exampleSelectGender">Select Prediction1</label>			
                                               <select class="form-control select_box select_box1" id="exampleSelectGender" name="prediction1">
                                                 <option>Select Symptom1</option>
@@ -39,7 +39,7 @@
                                                 {% endfor %}
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group2" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction2</label>			
                                               <select class="form-control select_box select_box2" id="exampleSelectGender" name="prediction2" >
                                                 <option>Select Symptom2</option>
@@ -53,113 +53,110 @@
                                               
                                             </select>
                                       </div> -->
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group3" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction3</label>			
                                               <select class="form-control select_box select_box3" id="exampleSelectGender" name="prediction3">
                                                 <option>Select Symptom3</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group4" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction4</label>			
                                               <select class="form-control select_box select_box4" id="exampleSelectGender" name="prediction4">
-                                                <option>Select Symptom4</option>
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group5" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction5</label>			
                                               <select class="form-control select_box select_box5" id="exampleSelectGender" name="prediction5">
-                                                <option>Select Symptom5</option>
                                                 
-                                              </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group6" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction6</label>			
                                               <select class="form-control select_box select_box6" id="exampleSelectGender" name="prediction6">
-                                                <option>Select Symptom6</option>
+                                                
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group7" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction7</label>			
                                               <select class="form-control select_box select_box7" id="exampleSelectGender" name="prediction7">
-                                                <option>Select Symptom7</option>
+                                                
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group8" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction8</label>			
                                               <select class="form-control select_box select_box8" id="exampleSelectGender" name="prediction8">
-                                                <option>Select Symptom8</option>
+                                                
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group9" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction9</label>			
                                               <select class="form-control select_box select_box9" id="exampleSelectGender" name="prediction9">
-                                                <option>Select Symptom9</option>
+                                                
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group10" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction10</label>			
                                               <select class="form-control select_box select_box10" id="exampleSelectGender" name="prediction10">
-                                                <option>Select Symptom10</option>
+                                                
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group11" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction11</label>			
                                               <select class="form-control select_box select_box11" id="exampleSelectGender" name="prediction11">
-                                                <option>Select Symptom11</option>
+                                                
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group12" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction12</label>			
                                               <select class="form-control select_box select_box12" id="exampleSelectGender" name="prediction12">
-                                                <option>Select Symptom12</option>
+                                                
                                                
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group13" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction13</label>			
                                               <select class="form-control select_box select_box13" id="exampleSelectGender" name="prediction13">
-                                                <option>Select Symptom13</option>
+                                               
                                                
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group14" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction14</label>			
                                               <select class="form-control select_box select_box14" id="exampleSelectGender" name="prediction14">
-                                                <option>Select Symptom14</option>
+                                                
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group15" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction15</label>			
                                               <select class="form-control select_box select_box15" id="exampleSelectGender" name="prediction15">
-                                                <option>Select Symptom15</option>
+                                                
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group16" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction16</label>			
                                               <select class="form-control select_box select_box16" id="exampleSelectGender" name="prediction16">
-                                                <option>Select Symptom16</option>
+                                                
                                                 
                                               </select>
                                         </div>
-                                        <div class="form-group" style="display:none">
+                                        <div class="form-group form_group17" style="display:none">
                                             <label for="exampleSelectGender">Select Prediction17</label>			
                                               <select class="form-control select_box select_box17" id="exampleSelectGender" name="prediction17">
-                                                <option>Select Symptom17</option>
+                                                
                                                 
                                               </select>
                                         </div>
                                         
-                                        <button type="submit" class="btn btn-primary me-2">Submit</button>
+                                        <button style="display:none;" type="submit" class="btn btn-primary me-2 predict_dept">Predict</button>
                                  </form>
 								  </div>
 								</div> 
