threshold changed in predict js1

--- a/From_Doccure/templates/form/Prediction/prediction.html
+++ b/From_Doccure/templates/form/Prediction/prediction.html
@@ -156,8 +156,11 @@
                                               </select>
                                         </div>
                                         
-                                        <button style="display:none;" type="submit" class="btn btn-primary me-2 predict_dept">Predict</button>
-                                 </form>
+                                        <button style="display:none;" type="submit" class="btn btn-primary me-2 predict_dept">Predict</button> <br><br><br>
+                                        <div style="display:none;" class="alert alert-success result_pred" role="alert">
+                                          
+                                        </div>
+                                     </form>
 								  </div>
 								</div> 
 								
